# gtktetcolor

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  gtktetcolor.soundlist
pixmaps/: README  pause.xpm  scores.xpm
po/: LINGUAS  POTFILES.in  de.po  fr.po  nl.po  ru.po
sounds/: Makefile.am
src/: Makefile.am  callbacks.c  callbacks.h  game.c  game.h  gtktetcolor.desktop  gtktetcolor.desktop.in  gtktetcolor.xpm  interface.c  interface.h  interface_menu.c  main.c  main.h  pixmaps.c  pixmaps.h  preferences.c  preferences.h  score.c  score.h
